# rag-docs-assistant

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: sample.md
src/rag_assistant/: __init__.py  api.py  cli.py  config.py  llm.py  loaders.py  pipeline.py  prompts.py  splitter.py  vectorstore.py
tests/: test_splitter.py
